fixed alignment for the main page

--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -777,12 +777,6 @@ video {
   gap: 1rem;
 }
 
-@media (min-width: 720px) {
-  .main-page {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-}
-
 .cards {
   padding: 8px;
   border: solid 1px #334155;
@@ -1118,6 +1112,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -1128,10 +1126,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .rounded {
